--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
         <h1>Contact</h1>
     </header>
     <section>
-        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>Email: <a href="mailto:parardisegh23@gmail.com">paradisegh23@gmail.com</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></p>
-        <p>GitHub: <a href="https://github.com/username" target="_blank">GitHub Profile</a></p>
+        <p>GitHub: <a href="https://github.com/Rehabiah" target="_blank">GitHub Profile</a></p>
     </section>
     <nav>
         <ul>
